modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<script src="script.js"></script>
+
+<section class="all-in-form">
+    <section class="container">
+        <form action="">
+
+            <div class="login-form">
+                <h1>Login</h1>
+            </div>
+
+            <div class="form-group">
+                <label id="username">Username</label>
+                <label>
+                    <input type="text" class="form-username" required>
+                </label>
+
+                <label id="password">Password</label>
+                <label>
+                    <input type="text" class="form-password" required>
+                </label>
+            </div>
+
+            <div class="forgot-password">
+                <h3>Forgot password?</h3>
+            </div>
+
+            <input type="submit" class="main-login" value="Login">
+
+            <div class="footer">
+                <h3>Not a member? Sign up!</h3>
+            </div>
+        </form>
+    </section>
+</section>
+
 </body>
 </html>
