--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <label id="password">Password</label>
                 <label>
-                    <input type="text" class="form-password" required>
+                    <input type="password" class="form-password" required>
                 </label>
             </div>
 
